# swm

./: .gitignore  ElSolv_SOR.f90  ElSolv_SOR.h  F_in.nc  H_in.nc  Makefile  Makefile.in  README  README.md  calc_lib.f90  calc_lib.h  calendar.h  calendar_module.f90  configure  configure.ac  cuda_module.cu  cuda_module.h  diag_module.f90  diag_module.h  dynFromFile_module.f90  eta_init.nc  global_var.py  io.h  io_module.f90  memchunk_module.f90  model.f90  model.h  model.namelist  output.namelist  run.sh  runselfcheck.sh  swm_damping_module.f90  swm_forcing_module.f90  swm_integration.py  swm_lateralmixing_module.f90  swm_module.f90  swm_module.h  swm_operators.py  swm_output.py  swm_param.py  (+11 more)
.devcontainer/: devcontainer.json
config/: config.guess  config.sub  nec-linux-gnu  nec-superux21.1
doc/: Doxyfile  Makefile  command.tex  sw.tex
doc/architecture/decisions/: 0001-record-architecture-decisions.md  0002-separate-system-into-independently-deployable-components.md  0003-apply-dependency-inversion-principle.md  0004-abstract-all-io-in-a-common-interface.md  0005-use-automatic-finalization-to-ease-memory-management.md  0006-io-shall-provide-a-reader-writer-api.md  0007-global-logger-via-module-variable.md
doc/images/: grid.eps
include/: ElSolv_SOR.h  abintegrate_function.inc  calc_lib.h  cuda_fortran_types.h  cuda_kernels.h  cuda_memory.h  cuda_module.h  diag_module.h  f_udunits_2.inc  fudunits2.h  interp.inc  io.h  model.h  swm_module.h  tracer_module.h  type.h  types.h
lib/netcdf-3.6.3/include/: netcdf.mod  typesizes.mod
selfcheck/: Makefile  eta_init_gauss.nc  eta_sc.nc  model.namelist  ncsneeded  output.namelist  runselfcheck.sh  u_sc.nc  v_sc.nc
selfcheck/output/: reference_000000000001_eta_out.nc  reference_000000000001_psi_out.nc  reference_000000000001_u_out.nc  reference_000000000001_v_out.nc
selfcheck/test1/: model.h  model.namelist  output.namelist
selfcheck/test1/output/: reference_000000000001_psi_out.nc
selfcheck/test_1/: model.namelist
selfcheck/test_adios2/: CMakeLists.txt  SSTreader.cpp  adios2.xml  mini.cpp  mini.f90  model.h  model.namelist
selfcheck/test_diaglist/: bs_sc.nc  io.h  model.h  model.namelist  taux_sc.nc  tauy_sc.nc
selfcheck/test_fixed_length_output/: model.namelist
selfcheck/test_lin_norot/: model.h  model.namelist
selfcheck/test_logging/: model.h  model.namelist
selfcheck/test_nl_tracer/: model.h  model.namelist
selfcheck/test_nonlinear/: model.h  model.namelist
selfcheck/test_oscfrc/: model.h  model.namelist
selfcheck/test_performance/: model.h  model.namelist
selfcheck/utest_str/: utest_str.f90
src/: ElSolv_SOR.f90  adios2.f90  adios2_io.f90  adios2io.f90  app.f90  calc_lib.f90  calendar_module.f90  component_module.f90  counter_module.f90  cuda_kernels.cu  cuda_kernels_const.cu  cuda_memory.cu  cuda_module.cu  cuda_module.f90  diagTask.f90  diagVar.f90  diag_module.f90  domain_module.f90  dynFromFile_module.f90  dynFromIo_module.f90  f_udunits_2.f90  generic_list.f90  grid_module.f90  init_vars.f90  io_module.f90  io_netcdf.f90  list.f90  list_mod.f90  logging.f90  main.f90  main_module.f90  memchunk_module.f90  model.f90  str.f90  swm_damping_module.f90  swm_forcing_module.f90  swm_lateralmixing_module.f90  swm_module.f90  swm_nonlinear_timestep_module.f90  swm_timestep_module.f90  (+7 more)
unit_tests/: Makefile  test_driver.f90  testing.f90  utest_app.f90  utest_counter.f90  utest_io.f90  utest_list.f90
utest_list.dSYM/Contents/: Info.plist
util/: interpolation.py  setup.py  spline.py  swm_util.py  test.py
util/kswm/: namelist.py  run.py
(+37 files in other folders)
